--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -36,7 +36,7 @@ spec:
           periodSeconds: 10
         readinessProbe:
           httpGet:
-            path: /readyz
+            path: /healthz
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 10
